src/test/resources/failing/fail68.pnd
@text foo(x) <- foo x is ok
foo(x) : string
bar(x) <- foo x isOK